# htp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
agent/: CMakeLists.txt  README.md  hooking.cpp  htp.cpp  loader.cpp  module.cpp  server.cpp  trampoline.h  trampoline_x32.asm
client/: README.md
client/python/: htpc.py
include/: htp.h  htpmanager.h  lock.h  message.h  module.h  server.h
src/: hooking.cpp  htp.cpp  htp_internal.h  trampoline.cpp  trampoline.h  trampoline_x64.asm
tests/: CMakeLists.txt  test_hook.cpp  test_server.cpp
utils/: lock.cpp  protocol.h
